add english version

--- a/EN-us/about.html
+++ b/EN-us/about.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Thememarch" />
     <!-- Favicon Icon -->
-    <link rel="icon" href="assets/img/favicon.svg" />
+    <link rel="icon" href="../assets/img/favicon.svg" />
     <!-- Site Title -->
     <title>Energy Tires , Tire & Service</title>
-    <link rel="stylesheet" href="assets/css/plugins/lightgallery.min.css" />
-    <link rel="stylesheet" href="assets/css/plugins/swiper.min.css" />
-    <link rel="stylesheet" href="assets/css/plugins/aos.css" />
-    <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/plugins/lightgallery.min.css" />
+    <link rel="stylesheet" href="../assets/css/plugins/swiper.min.css" />
+    <link rel="stylesheet" href="../assets/css/plugins/aos.css" />
+    <link rel="stylesheet" href="../assets/css/plugins/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <style>
         .desp {
             margin-top: 26px;
@@ -67,7 +67,7 @@
                 <div class="ak-main_header_in">
                     <div class="ak-main-header-left">
                         <a class="ak-site_branding" href="index.html">
-                            <img src="assets/img/logo/logo.png" alt="...">
+                            <img src="../assets/img/logo/logo.png" alt="...">
                         </a>
                     </div>
                     <div class="ak-main-header-center">
@@ -119,7 +119,7 @@
                         <a href="comming.html">
                             <div class="d-flex align-items-center gap-3">
                                 <div class="heartbeat-icon">
-                                    <span class="ak-heartbeat-btn"><img src="assets/img/user.svg" alt="..."></span>
+                                    <span class="ak-heartbeat-btn"><img src="../assets/img/user.svg" alt="..."></span>
                                 </div>
                                 <h6 style="color: white;"> Espace Client</h6>
                             </div>
@@ -133,7 +133,7 @@
     <!-- End Header Section -->
 
     <!-- Start common page title  -->
-    <div data-src="assets/img/about-page-title.jpg" class="ak-bg">
+    <div data-src="../assets/img/about-page-title.jpg" class="ak-bg">
         <div class="ak-height-100 ak-height-lg-100"></div>
         <div class="ak-height-125 ak-height-lg-40"></div>
         <div class="container">
@@ -294,8 +294,8 @@
                     </div>
                 </div>
                 <div class="choose-us-img" data-aos="fade-up" data-aos-delay="150">
-                    <img src="assets/img/services-single.jpg" alt="...">
-                    <img class="circle-img" src="assets/img/certified.png" alt="...">
+                    <img src="../assets/img/services-single.jpg" alt="...">
+                    <img class="circle-img" src="../assets/img/certified.png" alt="...">
                 </div>
             </div>
         </div>
@@ -330,27 +330,27 @@
 
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/Exclusivite/ACCOR.png" alt="">
+                        <img src="../assets/img/Exclusivite/ACCOR.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/Exclusivite/firestone_red_logo.png" alt="">
+                        <img src="../assets/img/Exclusivite/firestone_red_logo.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/Exclusivite/matraxtires.svg" alt="">
+                        <img src="../assets/img/Exclusivite/matraxtires.svg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/Exclusivite/triangle.png" alt="">
+                        <img src="../assets/img/Exclusivite/triangle.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/Exclusivite/voulis.png" alt="">
+                        <img src="../assets/img/Exclusivite/voulis.png" alt="">
                     </div>
                 </div>
 
@@ -369,7 +369,7 @@
                 <div class="row align-items-center gap-lg-0 gap-3" id="counter">
                     <div class="col-lg-6">
                         <div class="choose-us-img" data-aos="fade-up" data-aos-delay="150">
-                            <img src="assets/img/Network/B2B-Network.png" alt="...">
+                            <img src="../assets/img/Network/B2B-Network.png" alt="...">
                             <div class="ak-funfact ak-style1 aos-init aos-animate" data-aos="fade-up"
                                 data-aos-delay="100">
 
@@ -381,7 +381,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="choose-us-img" data-aos="fade-up" data-aos-delay="150">
-                            <img src="assets/img/Network/B2C-Network.png" alt="...">
+                            <img src="../assets/img/Network/B2C-Network.png" alt="...">
                             <div class="ak-funfact ak-style1 aos-init aos-animate" data-aos="fade-up"
                                 data-aos-delay="100">
 
@@ -404,46 +404,46 @@
 
 
             <div class="item vertical">
-                <a href="assets/img/Magasin/ain sbaa2.jpg">
-                    <img src="assets/img/Magasin/ain sbaa2.jpg" alt="Phto" />
+                <a href="../assets/img/Magasin/ain sbaa2.jpg">
+                    <img src="../assets/img/Magasin/ain sbaa2.jpg" alt="Phto" />
                     <div class="frame gallery-hover-icon">
-                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                        <span><img src="../assets/img/zoom.svg" alt="zoom"></span>
                     </div>
                 </a>
             </div>
 
             <div class="item horizontal">
-                <a href="assets/img/Magasin/herhoura.jpg">
-                    <img src="assets/img/Magasin/herhoura.jpg" alt="Phto" />
+                <a href="../assets/img/Magasin/herhoura.jpg">
+                    <img src="../assets/img/Magasin/herhoura.jpg" alt="Phto" />
                     <div class="frame gallery-hover-icon">
-                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                        <span><img src="../assets/img/zoom.svg" alt="zoom"></span>
                     </div>
                 </a>
             </div>
 
             <div class="item horizontal">
-                <a href="assets/img/Magasin/herhoura1.jpg">
-                    <img src="assets/img/Magasin/herhoura1.jpg" alt="Phto" />
+                <a href="../assets/img/Magasin/herhoura1.jpg">
+                    <img src="../assets/img/Magasin/herhoura1.jpg" alt="Phto" />
                     <div class="frame gallery-hover-icon">
-                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                        <span><img src="../assets/img/zoom.svg" alt="zoom"></span>
                     </div>
                 </a>
             </div>
 
             <div class="item">
-                <a href="assets/img/Magasin/meknes.jpg">
-                    <img src="assets/img/Magasin/meknes.jpg" alt="Phto" />
+                <a href="../assets/img/Magasin/meknes.jpg">
+                    <img src="../assets/img/Magasin/meknes.jpg" alt="Phto" />
                     <div class="frame gallery-hover-icon">
-                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                        <span><img src="../assets/img/zoom.svg" alt="zoom"></span>
                     </div>
                 </a>
             </div>
 
             <div class="item">
-                <a href="assets/img/Magasin/meknes 1.jpg">
-                    <img src="assets/img/Magasin/meknes 1.jpg" alt="Phto" />
+                <a href="../assets/img/Magasin/meknes 1.jpg">
+                    <img src="../assets/img/Magasin/meknes 1.jpg" alt="Phto" />
                     <div class="frame gallery-hover-icon">
-                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                        <span><img src="../assets/img/zoom.svg" alt="zoom"></span>
                     </div>
                 </a>
             </div>
@@ -457,32 +457,32 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/firestone.png" alt="">
+                        <img src="../assets/img/CLIENT/firestone.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/matador.jpg" alt="">
+                        <img src="../assets/img/CLIENT/matador.jpg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/matrax.png" alt="">
+                        <img src="../assets/img/CLIENT/matrax.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/triangle-.png" alt="">
+                        <img src="../assets/img/CLIENT/triangle-.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/Exclusivite/ACCOR.png" alt="">
+                        <img src="../assets/img/Exclusivite/ACCOR.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/Exclusivite/voulis.png" alt="">
+                        <img src="../assets/img/Exclusivite/voulis.png" alt="">
                     </div>
                 </div>
 
@@ -499,7 +499,7 @@
             <div class="primary-color-border"></div>
             <div class="ak-height-35 ak-height-lg-30"></div>
             <div class="footer-logo">
-                <img src="assets/img/logo/logo.png" alt="..." style="width: 25%;">
+                <img src="../assets/img/logo/logo.png" alt="..." style="width: 25%;">
                 <div class="ak-height-15 ak-height-lg-10"></div>
             </div>
             <div class="footer-content">
@@ -511,7 +511,7 @@
                     <div class="d-flex align-items-center gap-3">
                         <div class="heartbeat-icon">
                             <a href="tel:(406)555-0120">
-                                <span class="ak-heartbeat-btn"><img src="assets/img/phone.svg" alt="..."></span>
+                                <span class="ak-heartbeat-btn"><img src="../assets/img/phone.svg" alt="..."></span>
                             </a>
                         </div>
                         <a href="tel:(406)555-0120" class="phone text-hover-animaiton white">05 22 67 48 98</a>
@@ -686,13 +686,13 @@
         </svg>
     </span>
     <!-- Script -->
-    <script src="assets/js/plugins/jquery-3.7.1.min.js"></script>
-    <script src="assets/js/plugins/lightgallery.min.js"></script>
-    <script src="assets/js/plugins/simplePagination.min.js"></script>
-    <script src="assets/js/plugins/aos.js"></script>
-    <script src="assets/js/plugins/swiper.min.js"></script>
-    <script src="assets/js/plugins/SplitText.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/plugins/jquery-3.7.1.min.js"></script>
+    <script src="../assets/js/plugins/lightgallery.min.js"></script>
+    <script src="../assets/js/plugins/simplePagination.min.js"></script>
+    <script src="../assets/js/plugins/aos.js"></script>
+    <script src="../assets/js/plugins/swiper.min.js"></script>
+    <script src="../assets/js/plugins/SplitText.min.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
