--- a/FR-fr/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
+++ b/FR-fr/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
@@ -38,14 +38,7 @@
             letter-spacing: 5px;
             font-family: system-ui;
             line-height: 45px;
-        ">Energy TIres</p>
-                <!-- 
-            <div class="car-detail spoiler"></div>
-            <div class="car-detail back"></div>
-            <div class="car-detail center"></div>
-            <div class="car-detail center1"></div>
-            <div class="car-detail front"></div>
-            <div class="car-detail wheel"></div> -->
+        ">Energy Tires</p>
             </div>
         </div>
     </div>
@@ -99,6 +92,14 @@
                                     <a href="../contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
                                 </li>
 
+                                <li>
+                                    <a href="../../FR-fr/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
+                                        class="text-hover-animaiton"><img src="../../assets/img/flag/french.svg" /></a>
+                                </li>
+                                <li>
+                                    <a href="../../EN-us/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
+                                        class="text-hover-animaiton"><img src="../../assets/img/flag/UK.svg" /></a>
+                                </li>
                             </ul>
                         </div>
 
