--- a/FR-fr/contact-us.html
+++ b/FR-fr/contact-us.html
@@ -38,7 +38,7 @@
                 letter-spacing: 5px;
                 font-family: system-ui;
                 line-height: 45px;
-            ">Energy TIres</p>
+            ">Energy Tires</p>
                 <!-- 
                 <div class="car-detail spoiler"></div>
                 <div class="car-detail back"></div>
@@ -63,11 +63,11 @@
                     <div class="ak-main-header-center">
                         <div class="ak-nav ak-medium">
                             <ul class="ak-nav_list">
-                                <li class="menu-item-has-children">
+                                <li>
                                     <a href="index.html" class="text-hover-animaiton">Acceuil</a>
                                 </li>
                                 <li>
-                                    <a href="about.html" class="text-hover-animaiton">A propos</a>
+                                    <a href="about.html" class="text-hover-animaiton">A-propos</a>
                                 </li>
                                 <li class="menu-item-has-children">
                                     <a href="services.html" class="text-hover-animaiton">Services</a>
@@ -97,15 +97,23 @@
                                     <a href="comming.html" class="text-hover-animaiton">E-Store</a>
                                 </li>
                                 <li>
-                                    <a href="contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
+                                    <a href="contact-us.html" class="text-hover-animaiton">Contactez-Nous</a>
                                 </li>
 
+                                <li>
+                                    <a href="../FR-fr/contact-us.html" class="text-hover-animaiton"><img
+                                            src="../assets/img/flag/french.svg" /></a>
+                                </li>
+                                <li>
+                                    <a href="../EN-us/contact-us.html" class="text-hover-animaiton"><img
+                                            src="../assets/img/flag/UK.svg" /></a>
+                                </li>
                             </ul>
                         </div>
-
                     </div>
                     <div class="ak-main-header-right"
                         style="background: #FA0003;border-radius: 15px;padding: 1px 20px;">
+
                         <a href="comming.html">
                             <div class="d-flex align-items-center gap-3">
                                 <div class="heartbeat-icon">
