--- a/FR-fr/index.html
+++ b/FR-fr/index.html
@@ -39,14 +39,7 @@
                 letter-spacing: 5px;
                 font-family: system-ui;
                 line-height: 45px;
-            ">Energy TIres</p>
-                <!-- 
-                <div class="car-detail spoiler"></div>
-                <div class="car-detail back"></div>
-                <div class="car-detail center"></div>
-                <div class="car-detail center1"></div>
-                <div class="car-detail front"></div>
-                <div class="car-detail wheel"></div> -->
+            ">Energy Tires</p>
             </div>
         </div>
     </div>
@@ -68,7 +61,7 @@
                                     <a href="index.html" class="text-hover-animaiton">Acceuil</a>
                                 </li>
                                 <li>
-                                    <a href="about.html" class="text-hover-animaiton">A propos</a>
+                                    <a href="about.html" class="text-hover-animaiton">A-propos</a>
                                 </li>
                                 <li class="menu-item-has-children">
                                     <a href="services.html" class="text-hover-animaiton">Services</a>
@@ -98,7 +91,7 @@
                                     <a href="comming.html" class="text-hover-animaiton">E-Store</a>
                                 </li>
                                 <li>
-                                    <a href="contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
+                                    <a href="contact-us.html" class="text-hover-animaiton">Contactez-Nous</a>
                                 </li>
 
                                 <li>
