--- a/EN-us/contact-us.html
+++ b/EN-us/contact-us.html
@@ -38,14 +38,7 @@
                 letter-spacing: 5px;
                 font-family: system-ui;
                 line-height: 45px;
-            ">Energy TIres</p>
-                <!-- 
-                <div class="car-detail spoiler"></div>
-                <div class="car-detail back"></div>
-                <div class="car-detail center"></div>
-                <div class="car-detail center1"></div>
-                <div class="car-detail front"></div>
-                <div class="car-detail wheel"></div> -->
+            ">Energy Tires</p>
             </div>
         </div>
     </div>
@@ -64,31 +57,30 @@
                         <div class="ak-nav ak-medium">
                             <ul class="ak-nav_list">
                                 <li class="menu-item-has-children">
-                                    <a href="index.html" class="text-hover-animaiton">Acceuil</a>
+                                    <a href="index.html" class="text-hover-animaiton">Home</a>
                                 </li>
                                 <li>
-                                    <a href="about.html" class="text-hover-animaiton">A propos</a>
+                                    <a href="about.html" class="text-hover-animaiton">About</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="services.html" class="text-hover-animaiton">Services</a>
+                                    <a href="services.html" class="text-hover-animaiton">Our-Services</a>
                                     <ul>
                                         <li>
                                             <a href="Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
-                                                class="text-hover-animaiton">Ventes de pneumatique & lubrifiants
-                                                moteur</a>
+                                                class="text-hover-animaiton">Sales of tires & engine lubricants</a>
                                         </li>
                                         <li>
                                             <a href="Services/Atelier-de-reparation-voitures-et-poids-lourds.html"
-                                                class="text-hover-animaiton">Ateliers de réparation des voitures & poids
-                                                lourd</a>
+                                                class="text-hover-animaiton">Repair workshops for cars & heavy
+                                                vehicles</a>
                                         </li>
                                         <li>
                                             <a href="Services/Atelier-mobile-pour-voiture.html"
-                                                class="text-hover-animaiton">Ateliers mobile pour voitures</a>
+                                                class="text-hover-animaiton">Mobile workshops for cars</a>
                                         </li>
                                         <li>
                                             <a href="Services/Atelier-mobile-pour-poid-lourd.html"
-                                                class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
+                                                class="text-hover-animaiton">Mobile workshops for heavy vehicles</a>
                                         </li>
 
                                     </ul>
@@ -97,9 +89,17 @@
                                     <a href="comming.html" class="text-hover-animaiton">E-Store</a>
                                 </li>
                                 <li>
-                                    <a href="contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
+                                    <a href="contact-us.html" class="text-hover-animaiton">Contact Us</a>
                                 </li>
 
+                                <li>
+                                    <a href="../FR-fr/contact-us.html" class="text-hover-animaiton"><img
+                                            src="../assets/img/flag/french.svg" /></a>
+                                </li>
+                                <li>
+                                    <a href="../EN-us/contact-us.html" class="text-hover-animaiton"><img
+                                            src="../assets/img/flag/UK.svg" /></a>
+                                </li>
                             </ul>
                         </div>
 
@@ -111,7 +111,7 @@
                                 <div class="heartbeat-icon">
                                     <span class="ak-heartbeat-btn"><img src="../assets/img/user.svg" alt="..."></span>
                                 </div>
-                                <h6 style="color: white;"> Espace Client</h6>
+                                <h6 style="color: white;"> Login</h6>
                             </div>
                         </a>
                     </div>
