--- a/FR-fr/Services/Atelier-de-reparation-voitures-et-poids-lourds.html
+++ b/FR-fr/Services/Atelier-de-reparation-voitures-et-poids-lourds.html
@@ -38,7 +38,7 @@
             letter-spacing: 5px;
             font-family: system-ui;
             line-height: 45px;
-        ">Energy TIres</p>
+        ">Energy Tires</p>
                 <!-- 
             <div class="car-detail spoiler"></div>
             <div class="car-detail back"></div>
@@ -99,6 +99,14 @@
                                     <a href="../contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
                                 </li>
 
+                                <li>
+                                    <a href="../../FR-fr/Services/Atelier-de-reparation-voitures-et-poids-lourds.html"
+                                        class="text-hover-animaiton"><img src="../../assets/img/flag/french.svg" /></a>
+                                </li>
+                                <li>
+                                    <a href="../../EN-us/Services/Atelier-de-reparation-voitures-et-poids-lourds.html"
+                                        class="text-hover-animaiton"><img src="../../assets/img/flag/UK.svg" /></a>
+                                </li>
                             </ul>
                         </div>
 
