--- a/EN-us/services.html
+++ b/EN-us/services.html
@@ -127,10 +127,10 @@
         <div class="ak-height-125 ak-height-lg-40"></div>
         <div class="container">
             <div class="common-page-title">
-                <h3 class="page-title">Ce Qu'on Offre</h3>
+                <h3 class="page-title">What We Offer</h3>
                 <div class="d-flex gap-2 align-items-center">
-                    <a href="/index.html">Acceuil /</a>
-                    <a href="">Nos Serivces</a>
+                    <a href="./index.html">Home /</a>
+                    <a href="">Our Services</a>
                 </div>
             </div>
         </div>
@@ -146,49 +146,53 @@
                     <div class="services-content" style="max-width: 100% !important;">
                         <div class="ak-section-heading ak-style-1">
                             <div class="background-text" data-aos="fade-right" data-aos-duration="1000">Services</div>
-                            <h2 class="ak-section-title">Nos<br> Services</h2>
-                            <p class="ak-section-subtitle" style="max-width: 100% !important;">Chez Energy Tire, nous
-                                avons bâti notre expertise autour de la sélection, l’importation et la distribution de
-                                produits reconnus pour leur qualité, performance et fiabilité. Grâce à des partenariats
-                                solides avec des marques internationales, nous fournissons au marché marocain des
-                                produits adaptés aux exigences locales, que ce soit pour les véhicules particuliers,
-                                industriels ou les flottes professionnelles.<br>
-                                Grâce à notre réseau de distribution national, nos produits sont disponibles dans toutes
-                                les régions du Maroc, avec un accompagnement technique et commercial personnalisé. Notre
-                                mission est de garantir qualité, disponibilité et satisfaction client, en apportant des
-                                solutions sur mesure aux professionnels de l’automobile.<br>
-                                En plus de la distribution de pneumatiques et lubrifiants, Energy Tire propose une gamme
-                                complète de services de réparation, de maintenance et de montage pour tous types de
-                                véhicules : voitures particulières, poids lourds et engins de chantier (génie civil).
-                                Nous disposons d’un réseau d’ateliers fixes et mobiles pour offrir des prestations
-                                rapides, professionnelles et adaptées aux besoins de nos clients, particuliers comme
-                                professionnels.</p>
+                            <h2 class="ak-section-title">Our<br> Services</h2>
+                            <p class="ak-section-subtitle" style="max-width: 100% !important;">At Energy Tire, we have
+                                built our expertise around the selection, import, and distribution of products
+                                recognized for
+                                their quality, performance, and reliability. Thanks to strong partnerships with
+                                international brands, we provide the
+                                Moroccan market with products tailored to local demands, whether for passenger vehicles,
+                                industrial needs, or
+                                professional fleets.
+                                Thanks to our national distribution network, our products are available throughout all
+                                regions of Morocco, with
+                                personalized technical and commercial support. Our mission is to guarantee quality,
+                                availability, and customer
+                                satisfaction by providing customized solutions to automotive professionals.
+                                In addition to the distribution of tires and lubricants, Energy Tire offers a complete
+                                range of repair, maintenance, and
+                                installation services for all types of vehicles: passenger cars, heavy trucks, and
+                                construction equipment (civil
+                                engineering). We have a network of fixed and mobile workshops to deliver fast,
+                                professional services tailored to the
+                                needs of both individual and professional clients.
+                            </p>
                             <div class="ak-height-60 ak-height-lg-60"></div>
-                            <h4>Nos infrastructures :</h4>
+                            <h4>Our Infrastructure:</h4>
                             <ul>
-                                <li>Points de service dans les principales villes du Royaume :Casablanca, Rabat, Meknès,
-                                    Fès, Tanger, Marrakech, Agadir, etc.</li>
-                                <li>Ateliers mobiles équipés pour les interventions sur site (poids lourds, chantiers,
-                                    flottes).</li>
-                                <li>Partenaires agréés à travers le pays pour une couverture nationale optimale.</li>
+                                <li>Service points in major cities across the Kingdom: Casablanca, Rabat, Meknès, Fès,
+                                    Tangier, Marrakech, Agadir, etc.</li>
+                                <li>Mobile workshops equipped for on-site interventions (trucks, construction sites,
+                                    fleets).</li>
+                                <li>Authorized partners across the country for optimal national coverage.</li>
                             </ul>
                             <div class="ak-height-40 ak-height-lg-40"></div>
-                            <h4>Nos services :</h4>
+                            <h4>Our Services:</h4>
                             <ul>
-                                <li>Montage & équilibrage de pneus toutes dimensions</li>
-                                <li>Entretien rapide (vidange, freins, amortisseurs, etc.)</li>
-                                <li>Réparation toutes marques</li>
-                                <li>Interventions sur véhicules poids lourds & engins de chantier</li>
-                                <li>Accompagnement B2B personnalisé</li>
+                                <li>Tire mounting & balancing for all sizes</li>
+                                <li>Quick maintenance (oil change, brakes, shock absorbers, etc.)</li>
+                                <li>Repairs for all brands</li>
+                                <li>Interventions on heavy vehicles & construction equipment</li>
+                                <li>Personalized B2B support</li>
                             </ul>
                             <div class="ak-height-40 ak-height-lg-40"></div>
-                            <h4>Suivi & optimisation pour les flottes professionnelles :</h4>
+                            <h4>Monitoring & Optimization for Professional Fleets:</h4>
                             <ul>
-                                <li>Suivi technique des pneus (usure, pression, rotation)</li>
-                                <li>Suivi de rendement pour chaque véhicule ou type de mission</li>
-                                <li>Rapports d’analyse réguliers pour conseiller nos clients sur les meilleures
-                                    pratiques d’utilisation</li>
-                                <li>Recommandations sur le choix de pneus adapté au besoin réel (terrain, charge,
+                                <li>Technical monitoring of tires (wear, pressure, rotation)</li>
+                                <li>Performance tracking per vehicle or type of mission</li>
+                                <li>Regular analysis reports to advise our clients on best usage practices</li>
+                                <li>Recommendations on the best tire choices based on real needs (terrain, load,
                                     distance)</li>
                             </ul>
                         </div>
@@ -201,12 +205,12 @@
                     <div class="service-item">
 
                         <div class="service-info">
-                            <h4 class="title">Importation et distribution de pneus et lubrifiants</h4>
-                            <p class="desp mb-3">Importation et distribution de pneus (PCR*, LTR*, TBR*, OTR*, etc.), de
-                                lubrifiants pour véhicules légers, poids lourds, applications industrielles, ainsi que
-                                de l’AdBlue.</p>
+                            <h4 class="title">Import and distribution of tires and lubricants</h4>
+                            <p class="desp mb-3">Import and distribution of tires (PCR*, LTR*, TBR*, OTR*, etc.),
+                                lubricants for light and heavy-duty vehicles,
+                                industrial applications, and AdBlue.</p>
                             <a href="/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
-                                class="more-btn">Voir Plus</a>
+                                class="more-btn">See More</a>
                         </div>
                     </div>
                 </div>
@@ -215,13 +219,12 @@
                     <div class="service-item">
 
                         <div class="service-info">
-                            <h4 class="title">Ateliers de réparation et de maintenance pour véhicules légers et poids
-                                lourds.</h4>
-                            <p class="desp mb-3">Grâce à notre expertise et nos équipements de pointe, nous assurons des
-                                services rapides et efficaces pour garantir la performance et la sécurité de vos
-                                véhicules.</p>
-                            <a href="/Services/Atelier-de-reparation-voitures-et-poids-lourds.html"
-                                class="more-btn">Voir Plus</a>
+                            <h4 class="title">Repair and maintenance workshops for light and heavy-duty vehicles</h4>
+                            <p class="desp mb-3">Thanks to our expertise and advanced equipment, we provide fast and
+                                efficient services to ensure the performance and
+                                safety of your vehicles.</p>
+                            <a href="/Services/Atelier-de-reparation-voitures-et-poids-lourds.html" class="more-btn">See
+                                More</a>
                         </div>
                     </div>
                 </div>
@@ -230,10 +233,11 @@
                     <div class="service-item">
 
                         <div class="service-info">
-                            <h4 class="title">Ateliers mobiles pour véhicules légers.</h4>
-                            <p class="desp mb-3">L’expertise de nos techniciens chez vous ou sur votre site, pour une
-                                prise en charge complète de vos véhicules légers, avec gain de temps et flexibilité.</p>
-                            <a href="/Services/Atelier-mobile-pour-voiture.html" class="more-btn">Voir Plus</a>
+                            <h4 class="title">Mobile workshops for light vehicles</h4>
+                            <p class="desp mb-3">Our technicians' expertise at your location or site, for full support
+                                of your light vehicles, saving you time and
+                                offering flexibility.</p>
+                            <a href="/Services/Atelier-mobile-pour-voiture.html" class="more-btn">See More</a>
                         </div>
                     </div>
                 </div>
@@ -242,10 +246,11 @@
                     <div class="service-item">
 
                         <div class="service-info">
-                            <h4 class="title">Ateliers mobiles dédiés aux poids lourds.</h4>
-                            <p class="desp mb-3">L’expertise de nos techniciens chez vous ou sur votre site, pour une
-                                prise en charge complète de vos véhicules légers, avec gain de temps et flexibilité.</p>
-                            <a href="/Services/Atelier-mobile-pour-poid-lourd.html" class="more-btn">Voir Plus</a>
+                            <h4 class="title">Mobile workshops dedicated to heavy vehicles</h4>
+                            <p class="desp mb-3">Our technicians' expertise at your location or site, for full support
+                                of your heavy vehicles, saving you time and
+                                offering flexibility.</p>
+                            <a href="/Services/Atelier-mobile-pour-poid-lourd.html" class="more-btn">See More</a>
                         </div>
                     </div>
                 </div>
@@ -255,29 +260,7 @@
     <div class="scroll-end-point"></div>
     <!-- end Services -->
 
-    <!-- Start Cta -->
-    <!-- <div class="ak-height-125 ak-height-lg-80"></div>
-    <div class="container">
-        <div class="cta" data-aos="fade-right">
-            <span class="border-pr"></span>
-            <span class="border-wh"></span>
-            <div class="cta-info">
-                <h2 class="cta-title" data-aos="fade-left" data-aos-delay="100">Get in touch with our experts</h2>
-                <p class="cta-desp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                    Ipsum
-                    has been the
-                    industry's stan. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem
-                    Ipsum
-                    has been the industry's stan.</p>
-                <a href="contact-us.html" class="cta-btn">
-                    <img src="../assets/img/phone.svg" alt="...">
-                    <span class="ms-2"> GET IN TOUCH WITH US</span>
-                </a>
-            </div>
-        </div>
-    </div> -->
-    <!-- End Cta -->
+
 
 
     <!-- Start Footer -->
