--- a/EN-us/Services/Atelier-de-reparation-voitures-et-poids-lourds.html
+++ b/EN-us/Services/Atelier-de-reparation-voitures-et-poids-lourds.html
@@ -38,14 +38,7 @@
             letter-spacing: 5px;
             font-family: system-ui;
             line-height: 45px;
-        ">Energy TIres</p>
-                <!-- 
-            <div class="car-detail spoiler"></div>
-            <div class="car-detail back"></div>
-            <div class="car-detail center"></div>
-            <div class="car-detail center1"></div>
-            <div class="car-detail front"></div>
-            <div class="car-detail wheel"></div> -->
+        ">Energy Tires</p>
             </div>
         </div>
     </div>
@@ -64,31 +57,31 @@
                         <div class="ak-nav ak-medium">
                             <ul class="ak-nav_list">
                                 <li class="menu-item-has-children">
-                                    <a href="../index.html" class="text-hover-animaiton">Acceuil</a>
+                                    <a href="../index.html" class="text-hover-animaiton">Home</a>
                                 </li>
                                 <li>
-                                    <a href="../about.html" class="text-hover-animaiton">A propos</a>
+                                    <a href="../about.html" class="text-hover-animaiton">About</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="../services.html" class="text-hover-animaiton">Services</a>
+                                    <a href="../services.html" class="text-hover-animaiton">Our-Services</a>
                                     <ul>
                                         <li>
                                             <a href="./Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
-                                                class="text-hover-animaiton">Ventes de pneumatique & lubrifiants
-                                                moteur</a>
+                                                class="text-hover-animaiton">Sales of tires & engine lubricants</a>
                                         </li>
                                         <li>
                                             <a href="./Atelier-de-reparation-voitures-et-poids-lourds.html"
-                                                class="text-hover-animaiton">Ateliers de réparation des voitures & poids
-                                                lourd</a>
+                                                class="text-hover-animaiton">Repair workshops for cars & heavy
+                                                vehicles</a>
                                         </li>
                                         <li>
                                             <a href="./Atelier-mobile-pour-voiture.html"
-                                                class="text-hover-animaiton">Ateliers mobile pour voitures</a>
+                                                class="text-hover-animaiton">Mobile
+                                                workshops for cars</a>
                                         </li>
                                         <li>
                                             <a href="./Atelier-mobile-pour-poid-lourd.html"
-                                                class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
+                                                class="text-hover-animaiton">Mobile workshops for heavy vehicles</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -99,13 +92,21 @@
                                     <a href="../contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
                                 </li>
 
+                                <li>
+                                    <a href="../../FR-fr/Services/Atelier-de-reparation-voitures-et-poids-lourds.html"
+                                        class="text-hover-animaiton"><img src="../../assets/img/flag/french.svg" /></a>
+                                </li>
+                                <li>
+                                    <a href="../../EN-us/Services/Atelier-de-reparation-voitures-et-poids-lourds.html"
+                                        class="text-hover-animaiton"><img src="../../assets/img/flag/UK.svg" /></a>
+                                </li>
                             </ul>
                         </div>
 
                     </div>
                     <div class="ak-main-header-right"
                         style="background: #FA0003;border-radius: 15px;padding: 1px 20px;">
-                        <a href="comming.html">
+                        <a href="../comming.html">
                             <div class="d-flex align-items-center gap-3">
                                 <div class="heartbeat-icon">
                                     <span class="ak-heartbeat-btn"><img src="../../assets/img/user.svg"
@@ -127,12 +128,14 @@
         <div class="ak-height-125 ak-height-lg-40"></div>
         <div class="container">
             <div class="common-page-title">
-                <h3 class="page-title">Atelier de réparation voitures et poids lourds</h3>
+                <h3 class="page-title">Repair workshops for cars & heavy
+                    vehicles</h3>
                 <div class="d-flex gap-2 align-items-center">
-                    <a href="../index.html">Acceuil /</a>
-                    <a href="../services.html">Nos Serivces /</a>
+                    <a href="../index.html">Home /</a>
+                    <a href="../services.html">Our Services /</a>
 
-                    <a href="">Atelier de réparation</a>
+                    <a href="">Repair workshops for cars & heavy
+                        vehicles</a>
                 </div>
             </div>
         </div>
@@ -147,36 +150,44 @@
         <div class="sticky-content container">
             <div class="content">
                 <div class="single-blog-list" data-aos="fade-up">
-                    <h4 class="single-blog-title text-center">1. Un atelier de réparation automobile à la hauteur de vos
-                        exigences</h4>
+                    <h4 class="single-blog-title text-center">1. An Automotive Repair Workshop That Meets Your
+                        Expectations</h4>
                     <p class="single-blog-desp">
-                        Chez Energy Tires & Services, nous mettons la passion de l’automobile et l’excellence du service
-                        client au cœur de notre atelier de réparation. Forts d’une longue expérience dans le secteur et
-                        animés par le souci constant de qualité, nous avons bâti un espace dédié à la maintenance et à
-                        la réparation automobile, capable de répondre aux besoins les plus exigeants des conducteurs
-                        particuliers comme professionnels.<br>
-                        Notre atelier est équipé des technologies les plus avancées pour prendre en charge tous types de
-                        véhicules, qu’il s’agisse d’une voiture citadine, d’un SUV, d’un utilitaire ou d’un véhicule
-                        haut de gamme. Nous proposons une large palette de prestations incluant : révision complète,
-                        diagnostic électronique, entretien moteur, changement de courroie, freinage, climatisation,
-                        suspension, échappement, équilibrage, géométrie, et bien plus encore.<br>
-                        Nos techniciens, rigoureusement formés et passionnés par leur métier, sont en mesure
-                        d’identifier rapidement les dysfonctionnements et d’y apporter des solutions durables, tout en
-                        respectant les normes du constructeur. Nous nous engageons à offrir un service rapide,
-                        transparent et fiable, dans le respect total des délais et du budget.<br>
-                        Notre expertise dans l’importation et la distribution de pneus de grandes marques
-                        internationales ainsi que de lubrifiants moteur haut de gamme — notamment nos produits exclusifs
-                        Energy Oil et Matrax Lubricants — nous permet de proposer un service complet et cohérent à notre
-                        clientèle. Chaque intervention dans notre atelier peut être accompagnée d’un montage ou
-                        remplacement de pneus, d’un changement d’huile adapté à votre moteur, ou encore d’un diagnostic
-                        global pour assurer la longévité de votre véhicule.<br>
-                        Nous croyons fermement que la confiance se gagne par la qualité du service et l’attention portée
-                        aux besoins de chaque client. C’est pourquoi notre équipe est toujours à votre écoute pour vous
-                        conseiller, vous accompagner et vous proposer des solutions sur mesure, que ce soit pour un
-                        entretien courant ou une réparation plus complexe.<br>
-                        Avec Energy Tires & Services, vous bénéficiez non seulement de services techniques de qualité
-                        supérieure, mais aussi d’un véritable partenaire pour la sécurité, la performance et le bon
-                        fonctionnement de votre véhicule, jour après jour.<br>
+                        At Energy Tires & Services, we put our passion for automobiles and our commitment to customer
+                        service excellence at the
+                        heart of our repair workshop.
+                        With extensive experience in the sector and a constant drive for quality, we have built a space
+                        dedicated to vehicle
+                        maintenance and repair that meets the highest demands of both private and professional
+                        drivers.<br>
+                        Our workshop is equipped with the most advanced technologies to service all types of vehicles,
+                        from city cars to SUVs,
+                        utility vehicles, and premium models.
+                        We offer a wide range of services, including full inspections, electronic diagnostics, engine
+                        maintenance, belt
+                        replacements, brake servicing, air conditioning, suspension, exhaust systems, wheel balancing,
+                        alignment, and much more.<br>
+                        Our technicians, rigorously trained and passionate about their work, are able to quickly
+                        identify issues and provide
+                        long-lasting solutions while adhering to manufacturer standards.
+                        We are committed to delivering fast, transparent, and reliable service, always within your time
+                        and budget constraints.<br>
+                        Thanks to our expertise in importing and distributing premium international tire brands and
+                        high-end engine lubricants —
+                        including our exclusive Energy Oil and Matrax Lubricants products — we are able to offer our
+                        clients a complete and
+                        coherent service.
+                        Each visit to our workshop can include tire installation or replacement, oil changes adapted to
+                        your engine, or a full
+                        inspection to ensure your vehicle’s longevity.<br>
+                        We firmly believe that trust is earned through service quality and attention to each client’s
+                        needs. That’s why our team
+                        is always available to advise, support, and offer you tailored solutions, whether for routine
+                        maintenance or more
+                        complex repairs.<br>
+                        With Energy Tires & Services, you benefit not only from top-tier technical services but also
+                        from a true partner
+                        dedicated to the safety, performance, and smooth operation of your vehicle — day after day.<br>
 
                     </p>
                     <img src="../../assets/img/Magasin/herhoura.jpg" data-aos="fade-up" class="img-fluid" alt="...">
@@ -184,46 +195,39 @@
                 </div>
                 <div class="ak-height-50 ak-height-lg-50"></div>
                 <div class="single-blog-list" data-aos="fade-up">
-                    <h4 class="single-blog-title text-center">2. Atelier de Réparation Spécialisé pour Poids Lourds :
-                        Performance et Fiabilité au Service des Professionnels</h4>
+                    <h4 class="single-blog-title text-center">2. Specialized Heavy-Duty Repair Workshop: Performance and
+                        Reliability for Professionals</h4>
                     <p class="single-blog-desp">
-                        Chez Energy Tires & Services, nous mettons la passion de l’automobile et l’excellence du service
-                        client au cœur de notre atelier de réparation. Forts d’une longue expérience dans le secteur et
-                        animés par le souci constant de qualité, nous avons bâti un espace dédié à la maintenance et à
-                        la réparation automobile, capable de répondre aux besoins les plus exigeants des conducteurs
-                        particuliers comme professionnels.<br>
-                        Notre atelier est équipé des technologies les plus avancées pour prendre en charge tous types de
-                        véhicules, qu’il s’agisse d’une voiture citadine, d’un SUV, d’un utilitaire ou d’un véhicule
-                        haut de gamme. Nous proposons une large palette de prestations incluant : révision complète,
-                        diagnostic électronique, entretien moteur, changement de courroie, freinage, climatisation,
-                        suspension, échappement, équilibrage, géométrie, et bien plus encore.<br>
-                        Nos techniciens, rigoureusement formés et passionnés par leur métier, sont en mesure
-                        d’identifier rapidement les dysfonctionnements et d’y apporter des solutions durables, tout en
-                        respectant les normes du constructeur. Nous nous engageons à offrir un service rapide,
-                        transparent et fiable, dans le respect total des délais et du budget.<br>
-                        Chez Energy Tires & Services, nous mettons notre savoir-faire et notre expertise au service des
-                        transporteurs, logisticiens et professionnels du BTP grâce à un atelier de réparation
-                        entièrement dédié aux poids lourds. Conscients des exigences spécifiques de ce type de
-                        véhicules, nous avons conçu un espace technique moderne et parfaitement équipé pour répondre aux
-                        standards les plus élevés en matière d’entretien et de réparation de camions, bus, véhicules
-                        industriels et engins de chantier.<br>
-                        Notre atelier prend en charge une large gamme d’interventions mécaniques et techniques :
-                        diagnostic électronique, entretien moteur, systèmes de freinage, suspension, transmission,
-                        climatisation, contrôle de la géométrie, montage et équilibrage de pneus poids lourds, vidanges,
-                        remplacement de pièces d’usure, et bien plus encore. Grâce à notre équipe de techniciens
-                        spécialisés, formés aux dernières innovations du secteur, nous garantissons un service rapide,
-                        fiable et durable.<br>
-                        Nous mettons également à disposition des ateliers mobiles équipés, capables d’intervenir
-                        directement sur site en cas de panne ou pour des opérations de maintenance courante, réduisant
-                        ainsi l’immobilisation de vos véhicules et assurant la continuité de vos opérations.<br>
-                        En tant qu’experts de l’importation et de la distribution de pneus et lubrifiants, nous vous
-                        proposons les meilleures marques du marché, y compris nos exclusivités Energy Oil et Matrax
-                        Lubricants, spécialement formulées pour les moteurs puissants et soumis à des conditions
-                        extrêmes. Notre offre comprend également l’AdBlue, essentiel pour répondre aux normes
-                        environnementales en vigueur et garantir la conformité de vos véhicules.<br>
-                        Faire appel à Energy Tires & Services, c’est choisir un partenaire fiable qui comprend les
-                        enjeux de votre activité, et qui met tout en œuvre pour assurer la sécurité, la performance et
-                        la durabilité de votre flotte.<br>
+                        At Energy Tires & Services, we bring our passion for vehicles and commitment to customer service
+                        into our heavy-duty
+                        vehicle repair center.
+                        With years of experience and a relentless focus on quality, we have developed a fully dedicated
+                        workshop tailored to the
+                        specific maintenance and repair needs of trucks, buses, industrial vehicles, and construction
+                        equipment.<br>
+                        Equipped with the most advanced technologies, our workshop handles a wide range of services:
+                        electronic diagnostics,
+                        engine servicing, brake systems, suspension, transmission, air conditioning, alignment checks,
+                        tire mounting and
+                        balancing for trucks, oil changes, replacement of worn parts, and much more.<br>
+                        Thanks to our specialized technicians trained in the latest industry innovations, we guarantee
+                        fast, reliable, and
+                        durable interventions.<br>
+                        We also offer fully equipped mobile workshops capable of on-site repairs and regular
+                        maintenance, minimizing downtime
+                        and ensuring uninterrupted operations for your business.<br>
+                        As experts in the import and distribution of tires and lubricants, we provide access to the best
+                        brands on the market,
+                        including our exclusive Energy Oil and Matrax Lubricants — specially formulated for
+                        high-performance engines operating
+                        under extreme conditions.
+                        Our offering also includes AdBlue, essential for meeting environmental standards and ensuring
+                        the regulatory compliance
+                        of your vehicles.<br>
+                        Choosing Energy Tires & Services means choosing a trusted partner who understands your
+                        industry’s challenges and does
+                        everything possible to ensure the safety, performance, and longevity of your fleet.
+                        <br>
                     </p>
                     <img src="../../assets/img/Magasin/Atelierpoidlourd.jpeg" data-aos="fade-up" class="img-fluid"
                         alt="...">
