--- a/EN-us/Services/Atelier-mobile-pour-poid-lourd.html
+++ b/EN-us/Services/Atelier-mobile-pour-poid-lourd.html
@@ -38,14 +38,7 @@
             letter-spacing: 5px;
             font-family: system-ui;
             line-height: 45px;
-        ">Energy TIres</p>
-                <!-- 
-            <div class="car-detail spoiler"></div>
-            <div class="car-detail back"></div>
-            <div class="car-detail center"></div>
-            <div class="car-detail center1"></div>
-            <div class="car-detail front"></div>
-            <div class="car-detail wheel"></div> -->
+        ">Energy Tires</p>
             </div>
         </div>
     </div>
@@ -64,31 +57,31 @@
                         <div class="ak-nav ak-medium">
                             <ul class="ak-nav_list">
                                 <li class="menu-item-has-children">
-                                    <a href="../index.html" class="text-hover-animaiton">Acceuil</a>
+                                    <a href="../index.html" class="text-hover-animaiton">Home</a>
                                 </li>
                                 <li>
-                                    <a href="../about.html" class="text-hover-animaiton">A propos</a>
+                                    <a href="../about.html" class="text-hover-animaiton">About</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="../services.html" class="text-hover-animaiton">Services</a>
+                                    <a href="../services.html" class="text-hover-animaiton">Our-Services</a>
                                     <ul>
                                         <li>
                                             <a href="./Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
-                                                class="text-hover-animaiton">Ventes de pneumatique & lubrifiants
-                                                moteur</a>
+                                                class="text-hover-animaiton">Sales of tires & engine lubricants</a>
                                         </li>
                                         <li>
                                             <a href="./Atelier-de-reparation-voitures-et-poids-lourds.html"
-                                                class="text-hover-animaiton">Ateliers de réparation des voitures & poids
-                                                lourd</a>
+                                                class="text-hover-animaiton">Repair workshops for cars & heavy
+                                                vehicles</a>
                                         </li>
                                         <li>
                                             <a href="./Atelier-mobile-pour-voiture.html"
-                                                class="text-hover-animaiton">Ateliers mobile pour voitures</a>
+                                                class="text-hover-animaiton">Mobile
+                                                workshops for cars</a>
                                         </li>
                                         <li>
                                             <a href="./Atelier-mobile-pour-poid-lourd.html"
-                                                class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
+                                                class="text-hover-animaiton">Mobile workshops for heavy vehicles</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -99,13 +92,21 @@
                                     <a href="../contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
                                 </li>
 
+                                <li>
+                                    <a href="../../FR-fr/Services/Atelier-mobile-pour-poid-lourd.html"
+                                        class="text-hover-animaiton"><img src="../../assets/img/flag/french.svg" /></a>
+                                </li>
+                                <li>
+                                    <a href="../../EN-us/Services/Atelier-mobile-pour-poid-lourd.html"
+                                        class="text-hover-animaiton"><img src="../../assets/img/flag/UK.svg" /></a>
+                                </li>
                             </ul>
                         </div>
 
                     </div>
                     <div class="ak-main-header-right"
                         style="background: #FA0003;border-radius: 15px;padding: 1px 20px;">
-                        <a href="comming.html">
+                        <a href="../comming.html">
                             <div class="d-flex align-items-center gap-3">
                                 <div class="heartbeat-icon">
                                     <span class="ak-heartbeat-btn"><img src="../../assets/img/user.svg"
@@ -127,12 +128,12 @@
         <div class="ak-height-125 ak-height-lg-40"></div>
         <div class="container">
             <div class="common-page-title">
-                <h3 class="page-title">Atelier Mobile pour poid lourd</h3>
+                <h3 class="page-title">Mobile workshops for heavy vehicles</h3>
                 <div class="d-flex gap-2 align-items-center">
-                    <a href="../index.html">Acceuil /</a>
-                    <a href="../services.html">Nos Serivces /</a>
+                    <a href="../index.html">Home /</a>
+                    <a href="../services.html">OUr Services /</a>
 
-                    <a href="">Atelier mobile pour poid lourd</a>
+                    <a href="">Mobile workshops for heavy vehicles</a>
                 </div>
             </div>
         </div>
@@ -147,22 +148,27 @@
         <div class="sticky-content container">
             <div class="content">
                 <div class="single-blog-list" data-aos="fade-up">
-                    <h4 class="single-blog-title text-center">1. Ateliers Mobiles pour Poids Lourds – L’Expertise Energy
-                        Tires au Service de Votre Flotte</h4>
+                    <h4 class="single-blog-title text-center">1. Mobile Workshops for Heavy Vehicles – Energy Tires
+                        Expertise at the Service of Your Fleet</h4>
                     <p class="single-blog-desp">
-                        Chez Energy Tires & Services, nous comprenons que l’immobilisation d’un poids lourd peut
-                        représenter un coût important et impacter directement votre activité. C’est pourquoi nous avons
-                        développé un service d’ateliers mobiles dédiés aux poids lourds, pensé pour intervenir
-                        rapidement et efficacement là où vous en avez besoin – sur la route, sur chantier, en entrepôt
-                        ou dans vos locaux.<br>
-                        Grâce à nos unités mobiles ultra-équipées, nous sommes en mesure d’assurer une maintenance
-                        complète et des réparations mécaniques lourdes sur tous types de camions, remorques, bus ou
-                        engins industriels. Notre objectif est clair : réduire les temps d’arrêt de vos véhicules,
-                        assurer leur disponibilité continue, et vous offrir un service à la hauteur de vos
-                        exigences.<br>
-                        Nos techniciens spécialisés interviennent sur tout le territoire avec rigueur, expertise et
-                        réactivité, en respectant les normes de sécurité et les délais d’intervention. Avec Energy Tires
-                        & Services, vos véhicules lourds sont entre de bonnes mains – là où ils se trouvent.<br>
+                        At Energy Tires & Services, we understand that the immobilization of a heavy vehicle can
+                        represent a significant cost
+                        and directly impact your operations.
+                        That’s why we developed a dedicated mobile workshop service for heavy vehicles, designed to
+                        intervene quickly and
+                        efficiently wherever you need — on the road, on a construction site, in a warehouse, or at your
+                        premises.<br>
+                        Thanks to our fully equipped mobile units, we can perform complete maintenance and major
+                        mechanical repairs on all types
+                        of trucks, trailers, buses, and industrial equipment.
+                        Our objective is clear: reduce your vehicle downtime, ensure their continuous availability, and
+                        deliver a service that
+                        meets your highest expectations.<br>
+                        Our specialized technicians operate across the country with rigor, expertise, and
+                        responsiveness, while respecting
+                        safety standards and response times.
+                        With Energy Tires & Services, your heavy-duty vehicles are in good hands — wherever they
+                        are.<br>
                     </p>
                     <img src="../../assets/img/Magasin/ateliermobilepoidlourd.jpg" data-aos="fade-up" class="img-fluid"
                         alt="...">
@@ -170,26 +176,28 @@
                 </div>
                 <div class="ak-height-50 ak-height-lg-50"></div>
                 <div class="single-blog-list" data-aos="fade-up">
-                    <h4 class="single-blog-title text-center">Pourquoi faire confiance à nos Ateliers Mobiles pour Poids
-                        Lourds ?</h4>
+                    <h4 class="single-blog-title text-center">Why Trust Our Mobile Workshops for Heavy Vehicles?</h4>
                     <p class="single-blog-desp">
-                        <strong>Réactivité maximale & efficacité terrain</strong>
-                        Nos ateliers mobiles sont dotés d’équipements de dernière génération pour permettre des
-                        diagnostics précis, des réparations rapides et des interventions adaptées à tous types de pannes
-                        mécaniques ou électroniques.<br>
-                        <strong>Intervention sur site, partout et à tout moment</strong>
-                        Plus besoin de remorquer vos poids lourds vers un garage traditionnel. Nos équipes se déplacent
-                        directement à l’endroit de votre choix, vous faisant économiser du temps, de l’argent, et
-                        réduisant les interruptions de service.<br>
-                        <strong>Maintenance corrective & préventive</strong>
-                        En plus des dépannages, nous proposons des plans de maintenance préventive personnalisés pour
-                        éviter les pannes imprévues et allonger la durée de vie de vos véhicules.<br>
-                        <strong>Service flexible et disponibilité 24/7</strong>
-                        Parce que vos activités ne s’arrêtent jamais, notre équipe est disponible tous les jours,
-                        24h/24, pour s’adapter à vos horaires, vos urgences et vos contraintes logistiques.<br>
-                        <strong>Expertise multimarques</strong>
-                        Nos techniciens sont formés, certifiés et expérimentés pour intervenir sur l’ensemble des
-                        marques et modèles de poids lourds, avec une exigence constante de qualité et de fiabilité.<br>
+                        <strong>Maximum Responsiveness & On-Site Efficiency</strong>
+                        Our mobile workshops are equipped with the latest technology for accurate diagnostics, quick
+                        repairs, and interventions
+                        tailored to all types of mechanical or electronic failures.<br>
+                        <strong>On-Site Intervention, Anywhere and Anytime</strong>
+                        No need to tow your heavy vehicles to a traditional garage. Our teams come directly to your
+                        location, saving you time
+                        and money, and reducing service interruptions.<br>
+                        <strong>Corrective & Preventive Maintenance</strong>
+                        In addition to repairs, we offer personalized preventive maintenance plans to avoid unexpected
+                        breakdowns and extend the
+                        life of your vehicles.<br>
+                        <strong>Flexible Service and 24/7 Availability</strong>
+                        Because your operations never stop, our team is available every day, 24/7, to accommodate your
+                        schedules, emergencies,
+                        and logistical constraints.<br>
+                        <strong>Multibrand Expertise</strong>
+                        Our technicians are trained, certified, and experienced in servicing all brands and models of
+                        heavy vehicles, with a
+                        constant commitment to quality and reliability.<br>
 
 
                     </p>
