--- a/EN-us/index.html
+++ b/EN-us/index.html
@@ -375,7 +375,7 @@
                             every step of the way.</p>
                     </div>
                     <div class="ak-height-50 ak-height-lg-10"></div>
-                    <a href="services-two.html" class="more-btn">Our Services</a>
+                    <a href="./services.html" class="more-btn">Our Services</a>
                 </div>
             </div>
         </div>
