--- a/FR-fr/index.html
+++ b/FR-fr/index.html
@@ -417,7 +417,7 @@
                             satisfaction à chaque étape.</p>
                     </div>
                     <div class="ak-height-50 ak-height-lg-10"></div>
-                    <a href="services-two.html" class="more-btn">Nos services</a>
+                    <a href="./services.html" class="more-btn">Nos services</a>
                 </div>
             </div>
         </div>
